// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WelcomePage2 matches the snapshot desktop 1`] = `
<div>
  <div
    class="FourImagesBgstyles__DivImageContainer-sc-1fpm6f5-0 ckwQRQ"
  >
    <img
      alt="landscape"
      class="FourImagesBgstyles__Image-sc-1fpm6f5-1 vpGEF"
      src="[object Object]"
    />
    <img
      alt="space"
      class="FourImagesBgstyles__Image-sc-1fpm6f5-1 vpGEF"
      src="[object Object]"
    />
    <img
      alt="landscape 3"
      class="FourImagesBgstyles__Image-sc-1fpm6f5-1 vpGEF"
      src="[object Object]"
    />
    <img
      alt="landscape 4"
      class="FourImagesBgstyles__Image-sc-1fpm6f5-1 vpGEF"
      src="[object Object]"
    />
    <div
      class="ant-flex css-dev-only-do-not-override-1uq9j6g ant-flex-align-center ant-flex-justify-center"
      style="height: 100vh;"
    >
      <div
        class="ant-layout css-dev-only-do-not-override-1uq9j6g"
        style="width: 100%; max-width: 300px; padding: 20px 15px;"
      >
        <h1
          class="ant-typography css-dev-only-do-not-override-1uq9j6g"
          style="text-align: center;"
        >
          Welcome
        </h1>
        <input
          class="ant-input css-dev-only-do-not-override-1uq9j6g ant-input-outlined"
          placeholder="email"
          style="margin-bottom: 20px;"
          type="text"
          value=""
        />
        <div
          class="Welcome__ButtonContainer-sc-e8hzxi-0 iNYXqo"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-default ant-btn-block"
            type="button"
          >
            <span>
              email
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-default ant-btn-block"
            type="button"
          >
            <span>
              LogIn
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-default ant-btn-block"
            type="button"
          >
            <span>
              Create Account
            </span>
          </button>
        </div>
        <div
          class="ant-flex css-dev-only-do-not-override-1uq9j6g ant-flex-wrap-wrap ant-flex-justify-center ant-flex-gap-large"
          style="margin-bottom: 20px;"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              G
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              G
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              G
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              G
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              G
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WelcomePage2 matches the snapshot laptop 1`] = `
<div>
  <div
    class="FourImagesBgstyles__DivImageContainer-sc-1fpm6f5-0 ckwQRQ"
  >
    <img
      alt="landscape"
      class="FourImagesBgstyles__Image-sc-1fpm6f5-1 vpGEF"
      src="[object Object]"
    />
    <img
      alt="space"
      class="FourImagesBgstyles__Image-sc-1fpm6f5-1 vpGEF"
      src="[object Object]"
    />
    <img
      alt="landscape 3"
      class="FourImagesBgstyles__Image-sc-1fpm6f5-1 vpGEF"
      src="[object Object]"
    />
    <img
      alt="landscape 4"
      class="FourImagesBgstyles__Image-sc-1fpm6f5-1 vpGEF"
      src="[object Object]"
    />
    <div
      class="ant-flex css-dev-only-do-not-override-1uq9j6g ant-flex-align-center ant-flex-justify-center"
      style="height: 100vh;"
    >
      <div
        class="ant-layout css-dev-only-do-not-override-1uq9j6g"
        style="width: 100%; max-width: 300px; padding: 20px 15px;"
      >
        <h1
          class="ant-typography css-dev-only-do-not-override-1uq9j6g"
          style="text-align: center;"
        >
          Welcome
        </h1>
        <input
          class="ant-input css-dev-only-do-not-override-1uq9j6g ant-input-outlined"
          placeholder="email"
          style="margin-bottom: 20px;"
          type="text"
          value=""
        />
        <div
          class="Welcome__ButtonContainer-sc-e8hzxi-0 iNYXqo"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-default ant-btn-block"
            type="button"
          >
            <span>
              email
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-default ant-btn-block"
            type="button"
          >
            <span>
              LogIn
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-default ant-btn-block"
            type="button"
          >
            <span>
              Create Account
            </span>
          </button>
        </div>
        <div
          class="ant-flex css-dev-only-do-not-override-1uq9j6g ant-flex-wrap-wrap ant-flex-justify-center ant-flex-gap-large"
          style="margin-bottom: 20px;"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              G
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              G
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              G
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              G
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              G
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WelcomePage2 matches the snapshot mobile 1`] = `
<div>
  <div
    class="FourImagesBgstyles__DivImageContainer-sc-1fpm6f5-0 ckwQRQ"
  >
    <div
      class="ant-flex css-dev-only-do-not-override-1uq9j6g ant-flex-align-center ant-flex-justify-center"
      style="height: 100vh;"
    >
      <div
        class="ant-layout css-dev-only-do-not-override-1uq9j6g"
        style="width: 100%; max-width: 300px; padding: 20px 15px;"
      >
        <h1
          class="ant-typography css-dev-only-do-not-override-1uq9j6g"
          style="text-align: center;"
        >
          Welcome
        </h1>
        <input
          class="ant-input css-dev-only-do-not-override-1uq9j6g ant-input-outlined"
          placeholder="email"
          style="margin-bottom: 20px;"
          type="text"
          value=""
        />
        <div
          class="Welcome__ButtonContainer-sc-e8hzxi-0 iNYXqo"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-default ant-btn-block"
            type="button"
          >
            <span>
              email
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-default ant-btn-block"
            type="button"
          >
            <span>
              LogIn
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-default ant-btn-block"
            type="button"
          >
            <span>
              Create Account
            </span>
          </button>
        </div>
        <div
          class="ant-flex css-dev-only-do-not-override-1uq9j6g ant-flex-wrap-wrap ant-flex-justify-center ant-flex-gap-large"
          style="margin-bottom: 20px;"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              G
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
